--- a/index.html
+++ b/index.html
@@ -1,144 +1,134 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Путешествия по России</title>
-  <link rel="stylesheet" href="pages/index.css">
-</head>
-<body class="page">
-  <div class="content">
-    <header class="header">
-      <img class="header__logo" src="images/header-logo.svg" alt="Логотип">
-      <ul class="header__lang-links">
-        <li><a class="header__lang-link header__lang-link_active" href="#">Ru</a></li>
-        <li><a class="header__lang-link" href="#">En</a></li>
-      </ul>
-    </header>
-    <main>
-      <section class ="lead">
-          <h1 class="lead__title">Путешествия по России</h1>
-          <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
-          <img class="lead__image" src="images/lead-polka.jpg" alt="Картинка">
-          <p class="lead__caption">ваша полка — верхняя</p>
-      </section>
-      <section class="intro">
-        <div class ="intro__content">
-          <h2 class="intro__title">Чего мы&nbsp;там не&nbsp;видели?</h2>
-          <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
-          <ul class="intro__list">
-            <li>Часовых поясов <span class="intro__list-quantity">11</span></li>
-            <li>Объектов природного наследия ЮНЕСКО <span class="intro__list-quantity">12</span></li>
-            <li>Объектов культурного наследия ЮНЕСКО <span class="intro__list-quantity">16</span></li>
-            <li>Природных заповедников <span class="intro__list-quantity">105</span></li>
-            <li>Аэропортов <span class="intro__list-quantity">241</span></li>
-          </ul>
-        </div>
-      </section>
-      <section class="photo-grid">
-        <img class="photo-grid__item" src="images/photo-grid-train.jpg" alt="Картинка">
-        <img class="photo-grid__item" src="images/photo-grid-atharva-tulsi.jpg" alt="Картинка">
-        <img class="photo-grid__item" src="images/photo-grid-tuman.jpg" alt="Картинка">
-        <img class="photo-grid__item" src="images/photo-grid-sochi.jpg" alt="Картинка">
-        <img class="photo-grid__item" src="images/photo-grid-arisa.jpg" alt="Картинка">
-        <img class="photo-grid__item" src="images/photo-grid-baikal.jpg" alt="Картинка">
-        <img class="photo-grid__item" src="images/photo-grid-elbrus.jpg" alt="Картинка">
-        <img class="photo-grid__item" src="images/photo-grid-kondratiev.jpg" alt="Картинка">
-        <img class="photo-grid__item" src="images/photo-grid-kamchatka-1.jpg" alt="Картинка">
-        <img class="photo-grid__item" src="images/photo-grid-kamchatka-2.jpg" alt="Картинка">
-        <img class="photo-grid__item" src="images/photo-grid-baikal-2.jpg" alt="Картинка">
-        <img class="photo-grid__item" src="images/photo-grid-ergaki.jpg" alt="Картинка">
-      </section>
-      <section class="places">
-        <div class="place">
-          <h2 class="place__title">Куршская коса</h2>
-          <div class="place__website">
-            <p class="place__url-heading">url</p>
-            <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
-          </div>
-            <img class="place__image" src="images/place-kosa.jpg" alt="Картинка">
-            <div class="place__paragraphs">
-              <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
-              <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+    <head>
+        <meta charset="UTF-8">
+        <title>Дошкольник главная</title>
+        <!--Нормализуем стили-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+        <!--Подключаем собственные стили-->
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="shortcut icon" type="image/x-icon" href="img/logo.png">
+        
+        <!--Подключаем ШРИФТ-->
+        <!--<link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">-->
+        
+    </head>
+    <body class="body">
+       <!--**********************************
+HEADER
+*********************************************-->
+        <header class="header">
+            <a href="./index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
+            <a href="./index2.html" class="button_add header_button-add"><p class="header_button-text">Добавить учреждение</p></a>
+        </header>
+
+        <div class="search">
+            <!--<button href="#" class="search_menu">Все категории</button>-->
+            <div class="search_block">
+            <input class="input search_input" placeholder="Наименование ДУ">
+            <button class="search_button">Найти</button>
             </div>
         </div>
-        <div class="place">
-          <h2 class="place__title">Кольский</h2>
-          <div class="place__website">
-            <p class="place__url-heading">url</p>
-            <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
-          </div>
-            <img class="place__image" src="images/place-kolsky.jpg" alt="Картинка">
-            <div class="place__paragraphs">
-              <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
-                тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
-              <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля
-                в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний
-                об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
-                в Мурманск.</p>
+        <main class="cards">
+            <div class="card">
+            <div class="card_content">
+                <div class="card_immage"></div>
+                <h1 class="card_name">Название ДУ</h1>
+                <p class="card_phone">тел: 65-45-33</p>
+                <p class="card_description">Детский сад/разв.центр</p>
             </div>
-        </div>
-        <div class="place">
-          <h2 class="place__title">Алтай</h2>
-          <div class="place__website">
-            <p class="place__url-heading">url</p>
-            <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
-          </div>
-            <img class="place__image" src="images/place-altai.jpg" alt="Картинка">
-            <div class="place__paragraphs">
-              <p class="place__paragraph">Алтай — одно из красивейших мест в России.
-                В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете
-                в автомобиле окна, сможете познакомиться
-                с невидимым чудом здешних мест — горным воздухом.</p>
-              <p class="place__paragraph">Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы,
-                а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
             </div>
-        </div>
-        <div class="place">
-          <h2 class="place__title">Зимний Байкал</h2>
-          <div class="place__website">
-            <p class="place__url-heading">url</p>
-            <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
-          </div>
-            <img class="place__image" src="images/place-winter-baikal.jpg" alt="Картинка">
-            <div class="place__paragraphs">
-              <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
-                в мире. Многие также знают, что это самый большой источник пресной воды и одно
-                из красивейших мест в России.</p>
-              <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+                <div class="card">
+            <div class="card_content">
+                <div class="card_immage"></div>
+                <h1 class="card_name">Название ДУ</h1>
+                <p class="card_phone">тел: 65-45-33</p>
+                <p class="card_description">Детский сад/разв.центр</p>
             </div>
-        </div>
-        <div class="place">
-          <h2 class="place__title">Карелия</h2>
-          <div class="place__website">
-            <p class="place__url-heading">url</p>
-            <a class="place__link" href="http://vodlozero.ru/" target="_blank">http://vodlozero.ru/</a>
-          </div>
-            <img class="place__image" src="images/place-karelia.jpg" alt="Картинка">
-            <div class="place__paragraphs">
-              <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
             </div>
-        </div>
-      </section>
-      <section class="cover">
-        <a class="cover__background" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-          <div class="cover__text">
-            <h2 class="cover__title">До Байкала «на собаках»</h2>
-            <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h3>
-          </div> 
-        </a>
-      </section>
-    </main>
-      <footer  class="footer">
-        <nav class="footer__links">
-          <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
-          <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
-          <a href="https://rasp.yandex.ru"  class="footer__link">Расписание</a>
-          <a href="https://calendar.yandex.ru"  class="footer__link">Календарь</a>
-          <a href="https://travel.yandex.ru"  class="footer__link">Путешествия</a>
-        </nav>
-        <p class="footer__copyright">&#169;2021. Ольга Григель</p>
-      </footer>
-  </div>
-</body>
+                <div class="card">
+            <div class="card_content">
+                <div class="card_immage"></div>
+                <h1 class="card_name">Название ДУ</h1>
+                <p class="card_phone">тел: 65-45-33</p>
+                <p class="card_description">Детский сад/разв.центр</p>
+            </div>
+            </div>
+                <div class="card">
+            <div class="card_content">
+                <div class="card_immage"></div>
+                <h1 class="card_name">Название ДУ</h1>
+                <p class="card_phone">тел: 65-45-33</p>
+                <p class="card_description">Детский сад/разв.центр</p>
+            </div>
+            </div>
+                            <div class="card">
+            <div class="card_content">
+                <div class="card_immage"></div>
+                <h1 class="card_name">Название ДУ</h1>
+                <p class="card_phone">тел: 65-45-33</p>
+                <p class="card_description">Детский сад/разв.центр</p>
+            </div>
+            </div>
+                <div class="card">
+            <div class="card_content">
+                <div class="card_immage"></div>
+                <h1 class="card_name">Название ДУ</h1>
+                <p class="card_phone">тел: 65-45-33</p>
+                <p class="card_description">Детский сад/разв.центр</p>
+            </div>
+            </div>
+                <div class="card">
+            <div class="card_content">
+                <div class="card_immage"></div>
+                <h1 class="card_name">Название ДУ</h1>
+                <p class="card_phone">тел: 65-45-33</p>
+                <p class="card_description">Детский сад/разв.центр</p>
+            </div>
+            </div>
+                <div class="card">
+            <div class="card_content">
+                <div class="card_immage"></div>
+                <h1 class="card_name">Название ДУ</h1>
+                <p class="card_phone">тел: 65-45-33</p>
+                <p class="card_description">Детский сад/разв.центр</p>
+            </div>
+            </div>
+                            <div class="card">
+            <div class="card_content">
+                <div class="card_immage"></div>
+                <h1 class="card_name">Название ДУ</h1>
+                <p class="card_phone">тел: 65-45-33</p>
+                <p class="card_description">Детский сад/разв.центр</p>
+            </div>
+            </div>
+                <div class="card">
+            <div class="card_content">
+                <div class="card_immage"></div>
+                <h1 class="card_name">Название ДУ</h1>
+                <p class="card_phone">тел: 65-45-33</p>
+                <p class="card_description">Детский сад/разв.центр</p>
+            </div>
+            </div>
+                <div class="card">
+            <div class="card_content">
+                <div class="card_immage"></div>
+                <h1 class="card_name">Название ДУ</h1>
+                <p class="card_phone">тел: 65-45-33</p>
+                <p class="card_description">Детский сад/разв.центр</p>
+            </div>
+            </div>
+                <div class="card">
+            <div class="card_content">
+                <div class="card_immage"></div>
+                <h1 class="card_name">Название ДУ</h1>
+                <p class="card_phone">тел: 65-45-33</p>
+                <p class="card_description">Детский сад/разв.центр</p>
+            </div>
+            </div>
+        </main>
+        <footer class="footer">
+            <a href="./index3.html" class="footer_link">Контакты</a>
+        </footer>
+    </body>
 </html>
