Добавила несколько скриптов

--- a/index3.html
+++ b/index3.html
@@ -8,7 +8,7 @@
         <!--Подключаем собственные стили-->
         <link rel="stylesheet" href="css/main.css">
         <link rel="shortcut icon" type="image/x-icon" href="img/logo.png">
-        
+        <script src="script.js"></script>
         <!--Подключаем ШРИФТ-->
         <!--<link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">-->
         
