--- a/index3.html
+++ b/index3.html
@@ -18,11 +18,19 @@
 HEADER
 *********************************************-->
         <header class="header">
-            <a href="./index.html"><img class="logo" src="img/logo.png" alt="logo"></a>
+            <!-- navbar -->
+            <nav class="navbar">
+                <ul class="link-group">
+                    <li class="link"><a href="./index.html">Вернуться на главную страницу</a></li>
+                    <li class="link"><a href="/index1.html">Проекты</a></li>
+                    <li class="link"><a href="/index3.html">Контакты</a></li>
+                    <li class="link"><a href="/index2.html">Проект "Дошкольник"</a></li>
+                </ul>
+            </nav>
         </header>
 
         <main class="main">
-            <div class="content-add ">
+            <div class="content-add">
                     <div class="paragraph"><p class="paragraph-text">Григель Ольга</p></div>
                     <div class="paragraph"><p class="paragraph-text">Тел: 89062320506</p></div>
                     <div class="paragraph"><p class="paragraph-text">Адрес электронной почты: grigel@mail.ru</p></div>
