внесла изменение на страницу Дошкольник добавила класс тегу body

--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,7 @@
         <script src="script.js"></script>
         
     </head>
-    <body class="body">
+    <body class="body body_proect">
        <!--**********************************
 HEADER
 *********************************************-->
@@ -19,7 +19,6 @@ HEADER
         </header>
 <p class="link"><a href="./index.html">&#10094;&#10094; Вернуться на главную страницу</a></p>
         <div class="search">
-            <!--<button href="#" class="search_menu">Все категории</button>-->
             <div class="search_block">
             <input class="input search_input" placeholder="Наименование ДУ">
             <button class="search_button" onclick="search()">Найти</button>
